--- a/src/app/components/shared/popUp/add-members/add-members.component.html
+++ b/src/app/components/shared/popUp/add-members/add-members.component.html
@@ -7,7 +7,11 @@
             src="/assets/icons/close.svg" alt="">
     </div>
 
-    <span class="text-lg text-purple1"># {{this.channelService.channels[this.channelService.currentIndex()].name}}</span>
+    @if (currentChannelName) {
+    <span class="text-lg text-purple1">#
+        {{currentChannelName}}</span>
+    }
+
 
     <input [(ngModel)]="userSearchInput" (input)="onSearchInput()" [ngClass]="{'text-purple1 bg-primary': userExist}"
         class="border border-lightpurple rounded-[30px] h-14 px-5" type="text" placeholder="Name eingeben">
