fix: search dropdown

--- a/src/app/components/navigation/direct-messages/direct-messages.component.html
+++ b/src/app/components/navigation/direct-messages/direct-messages.component.html
@@ -18,7 +18,7 @@
         dmService.openDMs(userItem);
         mainNavService.markedUser(userItem)
       ">
-      <app-user class="hover:font-bold hover:text-purple3" [userInfo]="userItem" [i]="$index"></app-user>
+      <app-user class="hover:font-bold hover:text-purple3" [userInfo]="userItem"></app-user>
     </li>
     }
 
