--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -23,7 +23,10 @@
             @for (item of filterService.filteredResults(); track $index) {
 
             @if (isUser(item)) {
-            <app-user [userInfo]="item"></app-user>
+            <li (click)="directMessageService.openDMs(item);mainNavService.openChannel(true);filterService.searchValue.set('')">
+                <app-user [userInfo]="item"></app-user>
+            </li>
+
             } @else if (isChannel(item)) {
             <li (click)="mainNavService.openChannel()"
                 class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
