--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -26,7 +26,7 @@
       @for (item of filterService.filteredResults(); track $index) {
 
       @if (isUser(item)) {
-      <app-user [userInfo]="item"></app-user>
+      <li (click)="clickUser(item)"><app-user [userInfo]="item"></app-user></li>
       } @else if (isChannel(item)) {
       <li (click)="mainNavService.openChannel()"
         class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
