style: devspace-btn

--- a/src/app/components/shared/devspace-btn/devspace-btn.component.html
+++ b/src/app/components/shared/devspace-btn/devspace-btn.component.html
@@ -1,5 +1,5 @@
 <button (click)="mainNavService.toggleNav()"
-  class="w-[60px] h-fit absolute top-[50%] left-0 rounded-tr-[30px] rounded-br-[30px] py-[23px] px-[14px] flex flex-col items-center justify-center gap-2 shadow-[4px_4px_7px_rgba(0,0,0,0.2)] bg-transparent text-black hover:bg-white/100 transition-all ease-in duration-100 z-50">
+  class="w-[60px] h-fit absolute top-[50%] left-0 rounded-tr-[30px] rounded-br-[30px] py-[23px] px-[14px] flex flex-col items-center justify-center gap-2 shadow-[4px_4px_7px_rgba(0,0,0,0.2)] bg-transparent text-black hover:bg-white/100 transition-all ease-in duration-100 z-50 hover:text-purple1">
   <span class="mt-2 text-xl">
     @if (mainNavService.nav) {
     <span><img src="assets/imgs/directions.svg" alt="" /></span>
