--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -13,7 +13,7 @@
     <app-navigation class="w-full h-full"></app-navigation>
 
     <div
-      class="w-[60px] h-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-[999] flex items-center justify-center cursor-pointer block md:hidden"
+      class="w-[60px] h-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-[999] flex items-center justify-center cursor-pointer max810:flex hidden"
       Add
       commentMore
       actions
