--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,26 +1,38 @@
-<div class="w-full h-[80px] bg-primary flex justify-between items-center pr-[16px] pl-[16px]">
+<div
+  class="w-full h-[80px] bg-primary flex justify-between items-center pr-[16px] pl-[16px]"
+>
   <div (click)="switchLogo()">
     @if (!isMobile) {
-    <img id="logo" src="assets/imgs/logo.svg" alt="DaBubble Logo" class="hidden h-16 mt-4 sm:block" />
+    <img
+      id="logo"
+      src="assets/imgs/logo.svg"
+      alt="DaBubble Logo"
+      class="hidden h-16 mt-4 sm:block"
+    />
     } @if (isMobile) {
-    <div class="flex items-center gap-2 cursor-pointer sm:hidden">
+    <div class="flex items-center gap-2 cursor-pointer max810:flex hidden">
       <img src="/assets/icons/keyboard_arrow_down.svg" alt="" />
-      <img [src]="
+      <img
+        [src]="
           mainNavService.showAltLogo
             ? 'assets/imgs/logo.svg'
             : '/assets/imgs/workspace-logo.svg'
-        " alt="" />
+        "
+        alt=""
+      />
       @if (!mainNavService.showAltLogo) {
       <p class="text-xl font-bold">DevSpace</p>
       }
     </div>
     }
   </div>
-  
+
   <app-search class="w-[50%] hidden lg:block self-end"></app-search>
 
-  <img src="{{ usersService.storedUser.avatar }}" (click)="overlayService.logoutOvelay()"
-    class="h-16 mt-4 rounded-full cursor-pointer hover:scale-[1.1] duration-150" alt="DaBubble avatar" />
-
-
+  <img
+    src="{{ usersService.storedUser.avatar }}"
+    (click)="overlayService.logoutOvelay()"
+    class="h-16 mt-4 rounded-full cursor-pointer hover:scale-[1.1] duration-150"
+    alt="DaBubble avatar"
+  />
 </div>
