feat: guest loggin

--- a/src/app/components/landing-page/login/login.component.html
+++ b/src/app/components/landing-page/login/login.component.html
@@ -1,18 +1,5 @@
 <div class="w-full max-w-sm p-6 space-y-6 bg-white rounded-3xl">
 
-
-
-
-  <!-- <div class="absolute flex-col hidden gap-5 md:flex top-4 right-4">
-    <p class="text-base text-black">Neu bei DABubble?</p>
-    <button (click)="goToRegister()"
-      class="px-6 py-2 text-sm font-semibold transition border opacity-[0.8] hover:opacity-[1] hover:scale-[1.1] active:scale-[0.9] hover:border-textgray rounded-full text-purple1">
-      Konto erstellen
-    </button>
-  </div> -->
-
-
-
   <div class="w-full max-w-sm p-6 space-y-6 bg-white rounded-3xl">
     <h1 class="text-[32px] leading-[38.4px] text-center text-purple1">
       Anmeldung
@@ -65,27 +52,11 @@
         <button type="submit" class="flex-1 py-2 text-white rounded-full bg-purple1 hover:bg-purple3">
           Anmelden
         </button>
-        <button (click)="this.localStorageS.saveObject('currentUser', this.userService.GuestUser);" routerLink="main"
+        <button (click)="this.localStorageS.saveObject('currentUser', this.userService.GuestUser); login(true)" routerLink="main"
           type="button" class="flex-1 py-2 border rounded-full border-purple1 text-purple1 hover:bg-primary">
           Gäste-Login
         </button>
-
-
       </div>
     </form>
   </div>
 </div>
-
-
-<!-- 
-
-<div class="pt-4 space-y-4 text-center border-t border-lightpurple md:hidden">
-
-  <p class="text-base text-black">Neu bei DABubble?</p>
-
-  <button (click)="goToRegister()"
-    class="px-6 py-2 font-semibold transition border rounded-full text-purple1 border-purple1 hover:bg-primary">
-    Konto erstellen
-  </button>
-
-</div> -->
