feat: search new message by @ , #

--- a/src/app/components/shared/chat-input/chat-input.component.html
+++ b/src/app/components/shared/chat-input/chat-input.component.html
@@ -22,6 +22,33 @@
         class="flex-1 resize-none focus-visible:outline-none" type="text" placeholder="Antworten...">
           </textarea>
     }
+    @case ('new') {
+
+    @if (filterService.searchNewMessage().includes('@') || filterService.searchNewMessage().includes('#')) {
+    <div class="absolute top-[-390px] w-64 border border-black h-96 rounded-[30px] shadow-lg bg-white overflow-auto p-5">
+
+        <ul>
+            @for (item of filterService.filteredMessageResults(); track $index) {
+                @if (isUser(item)) {
+                    <li><app-user [userInfo]="item" ></app-user></li>
+                }@else if (isChannel(item)) {
+                    <li>{{ item.name }}</li>
+                }
+            }
+            @empty {
+            <span>Keine Ergebnisse gefunden</span>
+            }
+        </ul>
+
+
+
+    </div>
+    }
+
+    <textarea #messageInput [(ngModel)]="filterService.searchNewMessage" class="flex-1 resize-none focus-visible:outline-none" type="text"
+        placeholder="Antworten...">
+          </textarea>
+    }
     }
     }
 
