--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -1,112 +1,71 @@
 <section
-  class="flex items-center justify-between box-border bg-white min-h-[90px] py-[13px] px-10 header rounded-ss-[30px] rounded-se-[30px]"
->
-  @switch (chatType) { @case ('channel') {
+  class="flex items-center justify-between box-border bg-white min-h-[90px] py-[13px] px-10 header rounded-ss-[30px] rounded-se-[30px]">
+  @switch (chatType) {
+  @case ('channel') {
   <div
     class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary hover:text-purple1"
-    (click)="overlayService.editChannel()"
-  >
+    (click)="overlayService.editChannel()">
     <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag" />
     @if (channelService.channels[this.channelService.currentIndex()]) {
     <span>{{
       channelService.channels[this.channelService.currentIndex()].name
-    }}</span>
+      }}</span>
     }
     <img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="" />
   </div>
   } @case ('thread') {
-  <div
-    class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold"
-  >
-    <span>Thread </span
-    ><span class="text-purple2 text-[14px]"
-      ># {{ channelService.channels[channelService.currentIndex()].name }}</span
-    >
+  <div class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold">
+    <span>Thread </span><span class="text-purple2 text-[14px]"># {{
+      channelService.channels[channelService.currentIndex()].name }}</span>
   </div>
   } @case ('dm') {
-  <div
-    class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary min-w-[300px]"
-    (click)="overlayService.profileOverlay(true, dmService.otherUser)"
-  >
+  <div class="flex items-center gap-4 px-4 py-2 rounded-[30px] cursor-pointer hover:bg-primary min-w-[300px]"
+    (click)="overlayService.profileOverlay(true, dmService.otherUser)">
     <div class="relative">
-      <img
-        class="size-[50px] rounded-full"
-        src="{{ dmService.otherUser.avatar }}"
-        alt="Avatar"
-      />
-      <span
-        class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2"
-        [ngClass]="{ 'bg-online': isOnline, 'bg-offline': !isOnline }"
-        alt="Online"
-      ></span>
+      <img class="size-[50px] rounded-full" src="{{ dmService.otherUser.avatar }}" alt="Avatar" />
+      <span class="absolute right-0 bg-online size-4 bottom-1 rounded-[50%] border-white border-2"
+        [ngClass]="{ 'bg-online': isOnline, 'bg-offline': !isOnline }" alt="Online"></span>
     </div>
     <p class="text-xl font-bold">{{ dmService.otherUser.name }}</p>
   </div>
   } @case ('new') {
-  <div
-    class="flex flex-col gap-5 items-start w-full pt-5 pb-[7px] px-4 justify-center"
-  >
+  <div class="flex flex-col gap-5 items-start w-full pt-5 pb-[7px] px-4 justify-center">
     <p class="text-xl font-bold">Neue Nachricht</p>
-    <input
-      [(ngModel)]="filterService.searchValue"
-      class="border w-full border-lightpurple rounded-[30px] py-[13px] px-5 placeholder:text-textgray text-lg block lg:hidden"
-      type="text"
-      name=""
-      id=""
-      [placeholder]="'An: #channel, oder @jemand'"
-    />
+    <input [(ngModel)]="filterService.searchValue"
+      class="border w-full border-lightpurple rounded-[30px] py-[13px] px-5 placeholder:text-textgray text-lg block"
+      type="text" name="" id="" [placeholder]="'An: #channel, oder @jemand'" />
   </div>
   } @default {
-  <div
-    class="flex flex-col gap-5 items-start w-full pt-5 pb-[7px] px-4 justify-center"
-  >
+  <div class="flex flex-col gap-5 items-start w-full pt-5 pb-[7px] px-4 justify-center">
     <p class="text-xl font-bold">Neue Nachricht</p>
-    <input
-      class="border w-full border-lightpurple rounded-[30px] py-[13px] px-5 placeholder:text-textgray text-lg"
-      type="text"
-      name=""
-      id=""
-      [placeholder]="'An: #channel, oder @jemand'"
-    />
+    <input class="border w-full border-lightpurple rounded-[30px] py-[13px] px-5 placeholder:text-textgray text-lg"
+      type="text" name="" id="" [placeholder]="'An: #channel, oder @jemand'" />
   </div>
   } }
 
   <div class="flex items-center gap-[10px]">
     @switch (chatType) { @case ('channel') {
-    <div
-      (click)="overlayService.membersOverlay()"
+    <div (click)="overlayService.membersOverlay()"
       class="flex items-center px-[10px] py-[3px] rounded-full cursor-pointer hover:bg-primary max-[1024px]:hidden"
-      [ngClass]="{ hidden: mainNavService.hideChannelMembers }"
-    >
-      @for (user of channelService.getChannelMembers(); track i; let i = $index) { 
-        @if (i < 4) {
-      <img
-        class="size-9 mr-[-10px] border-2 border-white rounded-full"
-        src="{{ user.avatar }}"
-        alt="Member"
-      />
+      [ngClass]="{ hidden: mainNavService.hideChannelMembers }">
+      @for (user of channelService.getChannelMembers(); track i; let i = $index) {
+      @if (i
+      < 4) { <img class="size-9 mr-[-10px] border-2 border-white rounded-full" src="{{ user.avatar }}" alt="Member" />
       } @else if (i === 4) {
-      <img
-        class="border-2 border-white rounded-full cursor-pointer size-9"
-        src="assets/imgs/avatar3.svg"
-        alt="Member"
-      />
+      <img class="border-2 border-white rounded-full cursor-pointer size-9" src="assets/imgs/avatar3.svg"
+        alt="Member" />
       <span class="ml-[10px]">{{
         channelService.getChannelMembers().length
-      }}</span>
+        }}</span>
       } }
     </div>
-    <button
-      (click)="overlayService.addMembersOverlay()"
-      class="flex items-center justify-center rounded-full size-[34px] bg-primary"
-    >
+    <button (click)="overlayService.addMembersOverlay()"
+      class="flex items-center justify-center rounded-full size-[34px] bg-primary">
       <img src="assets/icons/add_user.svg" alt="Add user" />
     </button>
     } @case ('thread') {
-    <button
-      (click)="mainNavService.openChannel()"
-      class="flex items-center justify-center rounded-full size-[34px] hover:bg-primary"
-    >
+    <button (click)="mainNavService.openChannel()"
+      class="flex items-center justify-center rounded-full size-[34px] hover:bg-primary">
       <img src="assets/icons/close.svg" alt="Add user" />
     </button>
     } @default {} }
