--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -2,7 +2,7 @@
 
 
 
-  @if (!filterService.isChatInputActive()) {
+  <!-- @if (!filterService.isChatInputActive()) { -->
 
   <div
     class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px] lg:flex">
@@ -10,12 +10,13 @@
 
     <input type="text" [(ngModel)]="filterService.searchValue" placeholder="Search..."
       class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none pl-[10px]"
-      [disabled]="filterService.isChatInputActive()" />
+      
+      />
 
 
     <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]" />
   </div>
-  }
+  <!-- } [disabled]="filterService.isChatInputActive()" -->
 
   @if (filterService.searchValue().length >= 1 && !mainNavService.showNav()) {
 
