Feat: Load all sirect messages where current user ist a participant.

--- a/src/app/components/shared/search/search.component.html
+++ b/src/app/components/shared/search/search.component.html
@@ -1,49 +1,15 @@
 <section class="relative">
-
-
-
-  <!-- @if (!filterService.isChatInputActive()) { -->
-
-  <div
-    class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px] lg:flex">
-
-
-    <input type="text" [(ngModel)]="filterService.searchValue" placeholder="Search..."
-      class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none pl-[10px]"
-      
-      />
-
-
-    <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]" />
+  <div class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px] lg:flex">
+    <input
+      (input)="checkSearchInput()"
+      type="text"
+      [(ngModel)]="searchInput"
+      placeholder="Search..."
+      class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none pl-[10px]"/>
+    <img src="assets/imgs/icons/icons.svg" alt="" class="w-[32px h-[32px]]"/>
   </div>
-  <!-- } [disabled]="filterService.isChatInputActive()" -->
-
-  @if (filterService.searchValue().length >= 1 && !mainNavService.showNav()) {
 
   <div class="absolute z-10 w-full bg-white border border-black shadow-lg max-h-96 h-fit rounded-[30px] p-5 overflow-auto">
 
-    @if (filterService.filteredResults().length > 0) {
-    <ul class="flex flex-col">
-      @for (item of filterService.filteredResults(); track $index) {
-
-      @if (isUser(item)) {
-      <li (click)="clickUser(item)"><app-user [userInfo]="item"></app-user></li>
-      } @else if (isChannel(item)) {
-      <li (click)="mainNavService.openChannel()"
-        class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
-        <span class="font-bold">#</span> {{item.name}}
-      </li>
-      }
-      }
-    </ul>
-    } @else {
-      <div class="flex items-center h-20 font-bold">Keine gefunden </div>
-    }
-
-
-
-
   </div>
-  }
-
 </section>
