--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -8,7 +8,7 @@
     <app-search class="lg:hidden"></app-search>
     <app-navigation class="w-full h-full"></app-navigation>
     <div
-      class="size-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-10 flex items-center justify-center cursor-pointer lg:hidden"
+      class="size-[60px] absolute bottom-10 right-4 rounded-[100px] bg-purple1 z-10 flex items-center justify-center cursor-pointer lg:hidden hover:scale-[1.1] active:scale-[0.9] duration-150"
       Add commentMore actions (click)="switchContent()">
       <img src="assets/icons/edit_square2.svg" alt="" class="pl-[4px] w-8 h-8" />
     </div>
