--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -1,5 +1,7 @@
 <section class="h-[609px] flex flex-col px-5 py-10 gap-6 text-lg bg-white rounded-[30px] max-w-[870px]">
-  <p *ngIf="channelNameExists()" class="text-red-500">Ein Channel mit diesem Namen existiert bereits.</p>
+  @if (nameError) {
+    <p class="text-red-500">Ein Channel mit diesem Namen existiert bereits.</p>
+  }
 
   <div class="flex justify-between">
     <h2 class="text-2xl font-bold">Channel erstellen</h2>
