--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,82 +1,106 @@
 <section class="box-border pb-4 bg-white">
     <div class="box-border flex flex-col">
+        @if (chatType === 'new') {
+        <div class="flex flex-col h-full gap-5 p-3 border border-blue-700 md:flex-row">
+
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px]">
+                <h2 class="text-xl">
+                    <span class="text-purple1"># </span>
+                    Channels
+                </h2>
+
+                <ul class="flex flex-col">
+                    <li>Frontend</li>
+                    <li>Backend</li>
+                    
+                </ul>
+
+            </div>
+
+            <span class="border border-gray-500"></span>
+
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px]">
+                <h2 class="text-xl">
+                    <span class="text-purple1"> &#64;</span>
+                    Personen
+                </h2>
+
+
+                <ul class="flex flex-col">
+                    <li>Kevin Dev</li>
+                    <li>John Wick</li>
+                </ul>
+
+            </div>
+
+        </div>
+        }
+
+
+
         @for (message of messages; track i; let i = $index) {
-            @if (messages !== undefined) {
-                @if (i === 0  || !messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
-                    <app-chat-seperator
-                        class="flex items-center text-[18px] my-[10px] px-4"
-                        [date]="messageService.formatDate(message.timestamp)">
-                    </app-chat-seperator>
-                }
-            }
-            
-            <div id="{{ chatType }}{{ i }}" 
-                class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100 [&>#msg-options]:hover:pointer-events-auto"
-                [ngClass]="{ 'flex-row-reverse [&>#msg-options]:hover:left-[45px]':userService.fromCurrentUser(message.sender),
+        @if (messages !== undefined) {
+        @if (i === 0 || !messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp),
+        messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
+        <app-chat-seperator class="flex items-center text-[18px] my-[10px] px-4"
+            [date]="messageService.formatDate(message.timestamp)">
+        </app-chat-seperator>
+        }
+        }
+
+        <div id="{{ chatType }}{{ i }}"
+            class="relative flex gap-5 mt-[25px] px-4 py-2 cursor-pointer transition-all hover:bg-primary [&>#msg-options]:hover:opacity-100 [&>#msg-options]:hover:pointer-events-auto"
+            [ngClass]="{ 'flex-row-reverse [&>#msg-options]:hover:left-[45px]':userService.fromCurrentUser(message.sender),
                              '[&>div>#msg-content]:hover:bg-white [&>#msg-options]:hover:right-[45px]': !userService.fromCurrentUser(message.sender)
                             }">
 
-                @if (emojiIndex === i) {
-                    <app-emoji-picker class="absolute top-[27px] left-[45px] z-10" [ngClass]="{'left-[unset] right-[45px]': !userService.fromCurrentUser(message.sender)}" (emojiPicked)="addEmoji($event, message, i)"></app-emoji-picker>
+            @if (emojiIndex === i) {
+            <app-emoji-picker class="absolute top-[27px] left-[45px] z-10"
+                [ngClass]="{'left-[unset] right-[45px]': !userService.fromCurrentUser(message.sender)}"
+                (emojiPicked)="addEmoji($event, message, i)"></app-emoji-picker>
+            }
+
+            <app-message-options (emojiPicked)="addEmoji($event, message, i)" (editClicked)="toggleEditInput(i)"
+                (emojiPickerReactions)="toggleEmojiPickerReactions(i)" [chatType]="chatType" [message]="message" [i]="i"
+                [messageFromCurrentUser]="userService.fromCurrentUser(message.sender)" id="msg-options"
+                class="absolute pointer-events-none top-0 translate-y-[-23px] opacity-0"></app-message-options>
+            <div>
+                <img class="min-w-[50px] size-[50px] rounded-full"
+                    src="{{ userService.getUserById2(message.sender)?.avatar }}" alt="Avatar">
+            </div>
+            <div class="flex flex-col max-w-full gap-2">
+                <div class="flex items-center gap-5"
+                    [ngClass]="{ 'justify-end':userService.fromCurrentUser(message.sender)}">
+                    <span class="text-lg font-bold">{{ userService.getUserById2(message.sender)?.name }}</span>
+                    <span class="text-sm">{{ messageService.formatTime(message.timestamp) }}</span>
+                </div>
+                <div class="flex msg-content" id="msg-content" class="bg-primary p-[15px] rounded-[30px] max-w-full"
+                    [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':userService.fromCurrentUser(message.sender), ' rounded-ss-none': !userService.fromCurrentUser(message.sender) }">
+                    @if (editIndex !== i) {
+                    <span class="max-w-full">{{ message.message }}</span>
+                    } @else {
+                    <app-chat-input class="text-black" [index]="i" [message]="message" [edit]="true"
+                        [chatType]="chatType" (saveClicked)="toggleEditInput(i)">
+                    </app-chat-input>
+                    }
+                </div>
+
+                @if (message.threadId !== '' && chatType !== 'thread') {
+                <app-chat-message-answer class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
+                    [ngClass]="{'self-end':userService.fromCurrentUser(message.sender)}" [message]="message"
+                    [chatType]="chatType" [i]="i">
+                </app-chat-message-answer>
                 }
 
-                <app-message-options
-                    (emojiPicked)="addEmoji($event, message, i)"
-                    (editClicked)="toggleEditInput(i)"
-                    (emojiPickerReactions)="toggleEmojiPickerReactions(i)"
-                    [chatType]="chatType"
-                    [message]="message"
-                    [i]="i"
-                    [messageFromCurrentUser]="userService.fromCurrentUser(message.sender)"
-                    id="msg-options"
-                    class="absolute pointer-events-none top-0 translate-y-[-23px] opacity-0"></app-message-options>
-                <div>
-                    <img class="min-w-[50px] size-[50px] rounded-full" src="{{ userService.getUserById2(message.sender)?.avatar }}" alt="Avatar">
-                </div>
-                <div class="flex flex-col max-w-full gap-2">
-                    <div class="flex items-center gap-5" [ngClass]="{ 'justify-end':userService.fromCurrentUser(message.sender)}">
-                        <span class="text-lg font-bold">{{ userService.getUserById2(message.sender)?.name }}</span>
-                        <span class="text-sm">{{ messageService.formatTime(message.timestamp) }}</span>
-                    </div>
-                    <div class="flex msg-content" id="msg-content"
-                        class="bg-primary p-[15px] rounded-[30px] max-w-full"
-                        [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]':userService.fromCurrentUser(message.sender), ' rounded-ss-none': !userService.fromCurrentUser(message.sender) }">
-                        @if (editIndex !== i) {
-                            <span class="max-w-full">{{ message.message }}</span>
-                        } @else {
-                            <app-chat-input
-                                class="text-black"
-                                [index]="i"
-                                [message]="message"
-                                [edit]="true"
-                                [chatType]="chatType"
-                                (saveClicked)="toggleEditInput(i)">
-                            </app-chat-input>
-                        }
-                    </div>
-                    
-                    @if (message.threadId !== '' && chatType !== 'thread') {
-                        <app-chat-message-answer
-                            class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
-                            [ngClass]="{'self-end':userService.fromCurrentUser(message.sender)}"
-                            [message]="message"
-                            [chatType]="chatType"
-                            [i]="i">
-                        </app-chat-message-answer>
-                    }
-
-                    @if (message.reactions.length > 0) {
-                        <app-chat-message-reactions
-                            (emojiPicked)="addEmoji($event, message, i)"
-                            (pickerToggled)="toggleEmojiPickerReactions(i)"
-                            class="flex items-center max-w-full gap-2"
-                            [ngClass]="{'self-end pr-[5px]':userService.fromCurrentUser(message.sender)}"
-                            [message]="message"
-                            [chatType]="chatType">
-                        </app-chat-message-reactions>
-                    }
-                </div>
+                @if (message.reactions.length > 0) {
+                <app-chat-message-reactions (emojiPicked)="addEmoji($event, message, i)"
+                    (pickerToggled)="toggleEmojiPickerReactions(i)" class="flex items-center max-w-full gap-2"
+                    [ngClass]="{'self-end pr-[5px]':userService.fromCurrentUser(message.sender)}" [message]="message"
+                    [chatType]="chatType">
+                </app-chat-message-reactions>
+                }
             </div>
+        </div>
         }
     </div>
     <div #messagesEnd></div>
