Refactor: Standardization of the use of the current user, in relation to the localstorage, users and authservices, in the entire project.

--- a/src/app/components/shared/user/user.component.html
+++ b/src/app/components/shared/user/user.component.html
@@ -7,5 +7,5 @@
             [ngClass]="{'bg-online' :isOnline, 'bg-offline' : !isOnline}"></span>
     </div>
 
-    <span>{{userInfo.name}} @if(userInfo.name == currentUser.name){(DU)} </span>
+    <span>{{userInfo.name}} @if(userInfo.name == userService.currentUser.name){(DU)} </span>
 </section>
