--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -4,7 +4,7 @@
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
     <img
-      (click)="overlayService.profileOverlay(true, currentUser)"
+      (click)="overlayService.profileOverlay(true, userService.currentUser)"
       class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
       src="/assets/icons/close.svg"
       alt=""
@@ -23,7 +23,7 @@
     @for (avatar of avatars; track avatar) {
     <img
       (click)="selectAvatar(avatar)"
-      class="w-14 h-14 rounded-full cursor-pointer hover:ring-4 hover:ring-purple1 transition-all"
+      class="transition-all rounded-full cursor-pointer w-14 h-14 hover:ring-4 hover:ring-purple1"
       [src]="'/assets/imgs/avatar' + avatar + '.svg'"
       alt="Avatar {{ avatar }}"
     />
