--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,36 +1,45 @@
-<section class="box-border pb-4 bg-white">
-    <div class="box-border flex flex-col">
+<section class="box-border h-full pb-4 bg-white">
+    <div class="box-border flex flex-col h-full">
         @if (chatType === 'new') {
-        <div class="flex flex-col h-full gap-5 p-3 border border-blue-700 md:flex-row">
+        <div class="flex flex-col h-[100%] gap-5 p-3 md:flex-row">
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px]">
-                <h2 class="text-xl">
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-5 ">
+                <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"># </span>
                     Channels
                 </h2>
 
-                <ul class="flex flex-col">
-                    <li>Frontend</li>
-                    <li>Backend</li>
-                    
+                <ul class="flex flex-col gap-5">
+                    @for (channel of filterService.newMessageChannels; track $index) {
+                    <li class="flex items-center justify-between p-2 bg-gray-100 rounded">
+                        <span>#{{ channel.name }}</span>
+                        <button (click)="filterService.removeFromSelection(channel)" class="text-red-500">
+                            <img class="size-8" src="/assets/icons/trash.png" alt="">
+                        </button>
+                    </li>
+                    }
                 </ul>
 
             </div>
 
             <span class="border border-gray-500"></span>
 
-            <div class="flex flex-col items-center border border-black size-full rounded-[30px]">
-                <h2 class="text-xl">
+            <div class="flex flex-col items-center border border-black size-full rounded-[30px] p-5">
+                <h2 class="mb-3 text-2xl">
                     <span class="text-purple1"> &#64;</span>
                     Personen
                 </h2>
 
-
-                <ul class="flex flex-col">
-                    <li>Kevin Dev</li>
-                    <li>John Wick</li>
+                <ul class="flex flex-col gap-5">
+                    @for (person of filterService.newMessagePersons; track $index) {
+                    <li class="flex items-center justify-between p-2 bg-gray-100 rounded">
+                        <app-user [userInfo]="person"></app-user>
+                        <button (click)="filterService.removeFromSelection(person)" class="ml-2 text-red-500">
+                            <img class="size-8" src="/assets/icons/trash.png" alt="">
+                        </button>
+                    </li>
+                    }
                 </ul>
-
             </div>
 
         </div>
