--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<section class="flex flex-col h-full max-w-[1024px] rounded-[30px]  bg-white overflow-auto relative">
+<section class="flex pb-10 flex-col h-full max-w-[1024px] rounded-[30px]  bg-white overflow-auto relative">
 
     <div class="sticky z-[1] top-0 items-center justify-between hidden w-full p-3 bg-white lg:flex">
 
