--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -23,12 +23,13 @@
             @for (item of filterService.filteredResults(); track $index) {
 
             @if (isUser(item)) {
-            <li (click)="directMessageService.openDMs(item);mainNavService.openChannel(true);filterService.searchValue.set('')">
+            <li
+                (click)="clickUser(item)">
                 <app-user [userInfo]="item"></app-user>
             </li>
 
-            } @else if (isChannel(item)) {
-            <li (click)="mainNavService.openChannel()"
+            } @else if (isChannel(item) && isMember(item)) {
+            <li (click)="clickChannel(item)"
                 class="flex items-center gap-4 px-10 cursor-pointer h-9 hover:bg-primary hover:font-bold hover:text-purple3">
                 <span class="font-bold">#</span> {{item.name}}
             </li>
